# popular_spain_words_bot

./: .gitignore  README.md  pyproject.toml  run.py
telegram_bot/: all_words.json  config.py  helpers.py  main.py  sender.py
telegram_bot/db/: compressor.py  db_manager.py  tables.py
